# colopresso

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  .prettierrc.json  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.alpine  NOTICE  README.md  README_ja.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.devcontainer/resources/: .bashrc
.github/: renovate.json
.github/workflows/: ci.yaml  coverage.yaml  release.yaml
app/chrome/: manifest.json  offscreen.html  sidepanel.html  tsconfig.json  vite.config.ts
app/chrome/app/: ChromeApp.tsx  outputDirectoryStore.ts
app/chrome/entries/: chromeBackground.ts  chromeOffscreen.ts  chromeSidepanel.tsx
app/electron/: colopresso.icns  global.d.ts  index.html  main.ts  preload.ts  tsconfig.json  vite.config.ts  vite.preload.config.ts
app/electron/app/: ElectronApp.tsx
app/electron/entries/: electronRenderer.tsx
app/electron/native/: colopresso_native.c  win_delay_load_hook.cc
app/shared/: global.d.ts  tsconfig.json  vite.config.ts
app/shared/components/: AppHeader.tsx  BuildInfoPanel.tsx  DropZone.tsx  FileList.tsx  ProgressBar.tsx  SettingsPanel.tsx  StatusMessage.tsx  index.ts
app/shared/core/: PlatformContext.tsx  ThemeProvider.tsx  advancedSettingsModal.ts  configStore.ts  conversionWorker.ts  conversionWorkerClient.ts  converter.ts  files.ts  formatting.ts  pngxBridge.ts  storage.ts  theme.ts  zip.ts
app/shared/formats/: avif.ts  helpers.ts  index.ts  pngx.ts  webp.ts
app/shared/hooks/: index.ts  useClipboard.ts  useConversionErrors.ts  useFileEntries.ts  useFormatConfig.ts  useProcessingState.ts  useStatusMessage.ts
app/shared/i18n/: core.ts  index.tsx
app/shared/i18n/lang/: enUS.ts  jaJP.ts
app/shared/state/: appState.tsx
app/shared/styles/: App.module.css
app/shared/types/: external.d.ts  index.ts  platform.ts
cli/: CMakeLists.txt  colopresso.c
cmake/: buildtime.cmake  compiler.cmake  debug.cmake  dependencies.cmake  electron_app.cmake  electron_native_addon.cmake  emscripten.cmake  install.cmake  options.cmake  pngx_bridge.cmake  pngx_bridge_wasm.cmake  python.cmake  test.cmake  testing.cmake  thirdparty.cmake  threads.cmake  utils.cmake
pages/: index.html
python/: .gitignore  CMakeLists.txt  README.md  README_ja.md  pyproject.toml  requirements.txt
python/colopresso/: __init__.py  _colopresso_ext.c  core.py  py.typed
suppressions/: msan.supp  valgrind.supp
utils/: create_macos_update_metadata.mjs  create_macos_update_metadata.test.mjs  electron_configure.sh  update_licence_header.py
