# SPDX-License-Identifier: GPL-3.0-or-later
#
# This file is part of colopresso
#
# Copyright (C) 2025 COLOPL, Inc.
# Author: Go Kudo <g-kudo@colopl.co.jp>
# Developed with AI (LLM) code assistance. See `NOTICE` for details.

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "colopresso"
version = "12.1.1"
description = "Image compression and color reduction library"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "COLOPL, Inc." }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pillow>=10.0",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
    "-DCOLOPRESSO_USE_CLI=OFF",
    "-DCOLOPRESSO_USE_TESTS=OFF",
    "-DCOLOPRESSO_USE_UTILS=OFF",
    "-DCOLOPRESSO_DISABLE_FILE_OPS=OFF",
    "-DCOLOPRESSO_PYTHON_BINDINGS=ON",
]
wheel.packages = ["colopresso"]
wheel.py-api = "cp310"
install.components = ["python"]

[tool.scikit-build.cmake.define]
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
